Fix issue with reordering items by rebuilding the expand / collapse animation of sub todo lists

--- a/src/app/components/todo-list-tree-item/todo-list-tree-item.component.scss
+++ b/src/app/components/todo-list-tree-item/todo-list-tree-item.component.scss
@@ -36,4 +36,12 @@
 	margin-left: 13px;
 	padding-left: 13px;
 	border-left: 1px solid rgb(var(--dav-color-outline-rgb), 0.15);
+	transition: 200ms;
+}
+
+.items-container.collapsed {
+	transform: translateY(-10px);
+	opacity: 0;
+	margin-bottom: 0;
+	visibility: hidden;
 }
